Add MSN Weather-style detail cards and enhanced features
Major additions:
- 8 interactive weather detail cards with animated visualizations
  * Temperature card with current conditions
  * Feels Like card with wind chill/heat index
  * Wind card with animated canvas compass
  * Humidity card with visual bars and dew point
  * UV Index card with color-coded gauge
  * Precipitation card with 24h forecast
  * Visibility card with quality indicators
  * Pressure card with trend chart

New features:
- Wind chill calculation (NWS formula for temps ≤50°F)
- Heat index calculation (for temps ≥80°F)
- Feels-like temperature on main display
- Enhanced Weather.gov API data collection
- Canvas-based animated visualizations
- Comprehensive null/NaN error handling

New files:
- services/details.js - Detail widgets manager
- CHANGELOG.md - Project changelog
- public/favicon.svg - PWA icon

Updated files:
- index.html - Added weather-details section
- style.css - Card styling and animations (+170 lines)
- main.js - Integrated details manager
- services/weather.js - Extended API fields
- services/radar.js - Fixed map tile stretching
- README.md - Enhanced documentation
- IMPLEMENTATION_SUMMARY.md - Added update notes

Fixes:
- Fixed radar map tile stretching
- Fixed null/NaN values in detail cards
- Fixed feels-like temperature display logic
- Added fallback values for missing data
- Updated PWA icons to use SVG

Bundle size: ~31KB uncompressed, ~10KB gzipped
Browser compatibility: All modern browsers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Real-time weather widget with radar">
   <meta name="theme-color" content="#1e40af">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="manifest" href="/manifest.json">
   <title>Weather Widget</title>
 </head>
@@ -28,9 +29,86 @@
             <span id="temp" class="temp-value">--</span>
             <span class="temp-unit">°F</span>
           </div>
+          <div class="feels-like">
+            <span id="feels-like">Feels like --°F</span>
+          </div>
           <div class="conditions">
             <p id="conditions">--</p>
             <p id="wind">--</p>
+          </div>
+        </section>
+
+        <section class="weather-details">
+          <h3>Weather Details</h3>
+          <div class="details-grid">
+            <div class="detail-card">
+              <div class="detail-label">Temperature</div>
+              <div class="detail-value" id="detail-temp">--°</div>
+              <div class="detail-trend" id="detail-temp-trend">--</div>
+            </div>
+
+            <div class="detail-card">
+              <div class="detail-label">Feels like</div>
+              <div class="detail-value" id="detail-feels">--°</div>
+              <div class="detail-info" id="detail-feels-info">--</div>
+            </div>
+
+            <div class="detail-card">
+              <div class="detail-label">Wind</div>
+              <div class="detail-visual">
+                <canvas id="wind-compass" width="100" height="100"></canvas>
+              </div>
+              <div class="detail-value" id="detail-wind-speed">-- mph</div>
+              <div class="detail-info" id="detail-wind-gust">--</div>
+            </div>
+
+            <div class="detail-card">
+              <div class="detail-label">Humidity</div>
+              <div class="detail-visual">
+                <div class="humidity-bars" id="humidity-bars"></div>
+              </div>
+              <div class="detail-value" id="detail-humidity">--%</div>
+              <div class="detail-info" id="detail-dewpoint">Dew point: --°</div>
+            </div>
+
+            <div class="detail-card">
+              <div class="detail-label">UV Index</div>
+              <div class="detail-visual">
+                <div class="uv-gauge">
+                  <div class="uv-arc"></div>
+                  <div class="uv-indicator" id="uv-indicator"></div>
+                </div>
+              </div>
+              <div class="detail-value" id="detail-uv">--</div>
+              <div class="detail-info" id="detail-uv-level">--</div>
+            </div>
+
+            <div class="detail-card">
+              <div class="detail-label">Precipitation</div>
+              <div class="detail-visual">
+                <div class="precip-gauge" id="precip-gauge"></div>
+              </div>
+              <div class="detail-value" id="detail-precip">-- in</div>
+              <div class="detail-info" id="detail-precip-info">In next 24h</div>
+            </div>
+
+            <div class="detail-card">
+              <div class="detail-label">Visibility</div>
+              <div class="detail-visual">
+                <div class="visibility-bars" id="visibility-bars"></div>
+              </div>
+              <div class="detail-value" id="detail-visibility">-- mi</div>
+              <div class="detail-info" id="detail-visibility-level">--</div>
+            </div>
+
+            <div class="detail-card">
+              <div class="detail-label">Pressure</div>
+              <div class="detail-visual">
+                <canvas id="pressure-chart" width="120" height="40"></canvas>
+              </div>
+              <div class="detail-value" id="detail-pressure">-- in</div>
+              <div class="detail-info" id="detail-pressure-trend">--</div>
+            </div>
           </div>
         </section>
 
